--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI ="mongodb+srv://amamov:11041104@nestcluster.4xv7k.mongodb.net/cats?retryWrites=true&w=majority"
+MONGODB_URI ="mongodb+srv://amamov:11041104@nestcluster.4xv7k.mongodb.net/chat?retryWrites=true&w=majority"
 
 PORT ="8000"
 
